--- a/.config/hypr/hyprconf/autostart.conf
+++ b/.config/hypr/hyprconf/autostart.conf
@@ -9,6 +9,9 @@
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+
+exec-once = wlsunset -t 4500
 exec-once = waybar & hyprpaper
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Graphite-Dark"
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+
