--- a/.config/hypr/hyprconf/input.conf
+++ b/.config/hypr/hyprconf/input.conf
@@ -17,7 +17,7 @@ input {
 
     touchpad {
         natural_scroll = true
-        scroll_factor = 0.5
+        scroll_factor = 0.3
     }
 
 }
@@ -29,10 +29,11 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+
+# device {
+#     name = epic-mouse-v1
+#     sensitivity = -0.5
+# }
 
 device {
     name = elan050a:01-04f3:3158-touchpad
