--- a/.config/hypr/hyprconf/keybindings.conf
+++ b/.config/hypr/hyprconf/keybindings.conf
@@ -8,7 +8,7 @@
 # Set programs that you use
 $terminal = kitty
 $fileManager = $terminal -e ranger
-$menu = wofi --show drun
+$menu = rofi -show drun
 $browser = firefox
 
 ###################
